plugins {
	id "org.springframework.boot" version "2.3.0.RELEASE"
}

apply plugin: "java"
apply plugin: "io.spring.dependency-management"

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
	jcenter()
}

dependencies {
	implementation 'com.codahale.metrics:metrics-core:+'
	implementation "com.google.code.gson:gson:+"
	implementation "com.google.guava:guava:+"
	implementation "org.springframework.boot:spring-boot-starter"

// aws sdk 2
	implementation platform("software.amazon.awssdk:bom:+")
	implementation "software.amazon.awssdk:dynamodb"
}

springBoot {
	buildInfo()
}

bootJar {
	archiveName="dynamocat.jar"
	destinationDir = file(".")
	launchScript {
		script = file("custom.script")
	}
}
